@@ -61,14 +61,14 @@
 
   <h2>Where can I see a demo?</h2>
 	<p>This page is using PolyPage! You may have noticed the options in the top right corner of this page. Try toggling them to see the text below change to reflect your choices.</p>
-	<ul>
-		<li>No Class</li>
-		<li class=" test_class pp_logged_in">pp_logged_in</li>
-		<li class="pp_not_logged_in other_test_class">pp_not_logged_in</li>
-		<li class="test_class pp_logged_in_or_admin other_test_class">pp_logged_in_or_admin</li>
-		<li class="pp_logged_in_and_admin">pp_logged_in_and_admin</li>
-		<li class="pp_not_logged_in_and_not_admin">pp_not_logged_in_and_not_admin</li>
-	</ul>
+  <ul>
+    <li>No Class</li>
+    <li class=" test_class pp_logged_in">pp_logged_in</li>
+    <li class="pp_not_logged_in other_test_class">pp_not_logged_in</li>
+    <li class="test_class pp_logged_in_or_admin other_test_class">pp_logged_in_or_admin</li>
+    <li class="pp_logged_in_and_admin">pp_logged_in_and_admin</li>
+    <li class="pp_not_logged_in_and_not_admin">pp_not_logged_in_and_not_admin</li>
+  </ul>
 	
 	<h2>How does it work?</h2>
 	<p>Any class names that you would like Polypage to process should begin with <code>pp_</code> Polypage will ignore all other classes in the document.</p>
