@@ -31,6 +31,7 @@
 		init: function(defaults, opts, elems){
 		  var elems = elems || 'body';
       $.extend(this.options,opts);
+  		this.findStates();
 			this.buildOptionsBar(elems);
 			this.setStartValues(defaults);
 			this.refresh();
@@ -56,7 +57,7 @@
 				var s = self.extractDataFromClassName($(this).attr('class'));
 				var states = s.split(/_?not_|_or_|_and_/);
 				for(var state in states) {
-					if(self.states[states[state]]==undefined && states[state]!='' ) {
+					if(self.states[states[state]]==undefined && states[state]!='') {
 						if($.cookie()){ 
 							// the state may be undefined but if the state has been set on another page 
 							// we need to reset that state in our array to be on
@@ -84,6 +85,10 @@
 
 		findAll: function(){
 			return $("*[class*='pp_']");
+		},
+		
+		pageHasPPElements: function() {
+		  return this.findAll().length>0
 		},
 
 		refresh: function(){
@@ -137,7 +142,7 @@
 		},
 
 		buildOptionsBar: function(elems){
-			this.findStates();
+			if(!this.pageHasPPElements()) return;
 			var self=this;
 			$(elems).append('<div id="pp_options"><p>'+this.options.label+'</p><ul></ul></div>');
 			
